recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:16: error: not found: value cuurent
    cuurent(b)
    ^